# ParamountExternal

./: CMakeLists.txt  README.md  bootstrap  bootstrap.bat
cmake/: Versions.cmake
projects/: boost.cmake  gtest.cmake  paramount.bundle.cmake  qt.cmake
scripts/: bootstrap-build-environment.ps1
toolchains/: x64-osx-clang900.cmake  x64-win-msvc140.cmake
